--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,7 @@
 title: "🌌 ConStellE: The Reincarination"
 theme: minima
+
+## Use a remote theme from GitHub Pages
+remote_theme: pages-themes/modernist@v0.2.0
+plugins:
+- jekyll-remote-theme 
